--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
       <!--Introduction Modal-->
       <div class="intro_modal hide">
         <div class="intro_modal_body">
-          <h1 class="heading"> Match the Cards 
+          <h1 class="heading"> Match the Cards
           </h1>
           <hr>
           <p>
             <strong>
-              <u> Overview 
-              </u> 
+              <u> Overview
+              </u>
             </strong>: This game is based on one of my favorite
             animes. Each card symbolizes an important character or event from FSN.
-            <em> All right of FSN belong to TypeMoon. 
+            <em> All right of FSN as well as the background image belong to TypeMoon.
             </em>
           </p>
           <p>
-            <strong> 
-              <u> Objective 
-              </u> 
+            <strong>
+              <u> Objective
+              </u>
             </strong>: Match the cards to win the game. Number of
             stars will reduce at 16 moves and 24 moves.
           </p>
@@ -51,21 +51,19 @@
       <div class="modal_background hide">
         <div class="modal_body">
           <div class="modal_heading">
-            <h2 class="modal_title">Stats
+            <h2 class="modal_title">Scoreboard
             </h2>
-            <span class="modal_close">x
-            </span>
           </div>
           <div class ="modal_info">
             <h3>
-              <strong> Congrats! You won! 
+              <strong> Congrats! You won!
               </strong>
             </h3>
-            <span class="modal_time">Time = 
+            <span class="modal_time">Time =
             </span>
-            <span class="modal_stars">Rating = 
+            <span class="modal_stars">Rating =
             </span>
-            <span class="modal_moves">Moves = 
+            <span class="modal_moves">Moves =
             </span>
           </div>
           <div class="modal_buttons">
@@ -78,7 +76,7 @@
       </div>
       <section class="score-panel">
         <!-- Added Clock-->
-        <span class="clock">TIME: 0.00 ll 
+        <span class="clock">TIME: 0.00 ll
         </span>
         <ul class="stars">
           <li>
@@ -94,7 +92,7 @@
             </i>
           </li>
         </ul>
-        <span class="moves">ll 0 
+        <span class="moves">ll 0
         </span> Moves
         <div class="restart">
           <i class="fas fa-redo">
